# dioxus_component

./: .gitignore  COMPONENTS.md  CSS_SETUP.md  Cargo.toml  DEPLOYMENT.md  DEPLOY_CHECKLIST.md  Dioxus.toml  EXAMPLE_PROJECT_SETUP.md  MIGRATION.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  VERCEL_PREBUILD.md  WASM_SIZE_OPTIMIZATION.md  build-showcase.sh  build.sh  package-lock.json  safelist.json  tailwind.css  vercel.json
assets/: main.css  tailwind.css
examples/: README.md  demo.rs  main.rs
examples/pages/: accordion_demo.rs  avatar_demo.rs  badge_demo.rs  button_demo.rs  card_demo.rs  checkbox_demo.rs  dialog_demo.rs  empty_demo.rs  installation.rs  landing.rs  mod.rs  portal_demo.rs  spinner_demo.rs  tooltip_demo.rs
src/: components.css  lib.rs  main.rs
src/components/: accordion.rs  avatar.rs  button.rs  mod.rs  spinner.rs  tooltip.rs
src/components/accordion/: accordion.css  accordion.rs
src/components/avatar/: avatar.css  avatar.rs
src/components/badge/: badge.css  badge.rs
src/components/button/: button.rs
src/components/card/: mod.rs
src/components/checkbox/: checkbox.css  mod.rs
src/components/dialog/: mod.rs
src/components/empty/: mod.rs
src/components/portal/: mod.rs
src/components/spinner/: spinner.css  spinner.rs
src/components/tooltip/: tooltip.css  tooltip.rs
src/utils/: helper.rs
