[package]
name = "dioxus_components"
version = "0.1.0"
authors = ["letri <>"]
edition = "2021"
description = "A comprehensive collection of reusable Dioxus 0.7 components built with Tailwind CSS v4"
license = "MIT"
repository = "https://github.com/LeTri234/dioxus_component"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dioxus_components"
path = "src/lib.rs"

[[bin]]
name = "demo"
path = "src/main.rs"
required-features = ["demo"]

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
wasm-bindgen = "0.2.105"
web-sys = { version = "0.3.82", features = ["Window"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
demo = []

